--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="secondHeadingLanding">
                 <h1>Who we are</h1>
                 <p><b>
-                    Build Your Dream construction</b> service one of the most renowned construction agencies in Sri Lanka. We are dedicated to providing the best service possible for our customers.
+                    Build Your Dream construction</b> service one of the most renowned construction agencies in Kosova. We are dedicated to providing the best service possible for our customers.
                     <br/>
                     <br/>
                     Harum id commodi, minima, exercitationem culpa molestias deserunt ab est nulla quis totam dolorum sit vitae hic neque, alias praesentium nesciunt aliquam.
